// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`long.js - flow-verify 1`] = `
====================================options=====================================
parsers: ["flow", "babylon"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import(                                                                         |
  'myreallylongdynamicallyloadedmodulenamemyreallylongdynamicallyloadedmodulenam|e'
);                                                                              |
                                                                                |
import(                                                                         |
  'myreallylongdynamicallyloadedmodulenamemyreallylongdynamicallyloadedmodulenam|e'
).then(exports => {                                                             |
});                                                                             |
                                                                                |
=====================================output=====================================
import("myreallylongdynamicallyloadedmodulenamemyreallylongdynamicallyloadedmodu|lename");
                                                                                |
import("myreallylongdynamicallyloadedmodulenamemyreallylongdynamicallyloadedmodu|lename").then(
  exports => {}                                                                 |
);                                                                              |
                                                                                |
================================================================================
`;

exports[`then.js - flow-verify 1`] = `
====================================options=====================================
parsers: ["flow", "babylon"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const x = import('some-module').then(x => {                                     |
  // ...                                                                        |
});                                                                             |
                                                                                |
=====================================output=====================================
const x = import("some-module").then(x => {                                     |
  // ...                                                                        |
});                                                                             |
                                                                                |
================================================================================
`;
